--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 .card{
     display: flex;
     flex-wrap:nowrap;
-    justify-content: space-around;
+    justify-content:space-around;
     
     transition: 0.3s;
     max-width: 50em;
@@ -31,8 +31,8 @@
     border: 1px solid white;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-radius: 0;
-    padding: 2em;
-    margin: 4em;
+    width: 30%;
+    margin: 1%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -49,7 +49,7 @@ img:hover{
 }
 
   .card-p{
-    width: 10rem;
+    width: 10vw;
 }
 article button{
     align-self: flex-end;
