--- a/Sass_filen/output.css
+++ b/Sass_filen/output.css
@@ -4,26 +4,17 @@
   box-sizing: border-box;
 }
 
-@media (max-width: 500px) {
-  .container-item {
-    display: block;
-    flex-wrap: wrap;
-  }
-}
-
 .card {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-around;
-
   transition: 0.3s;
   max-width: 50em;
   margin: auto;
   text-align: center;
 }
-
 .card:hover {
-  box-shadow: 0 8px px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .container-item {
@@ -38,10 +29,17 @@
   align-items: center;
 }
 
+@media (max-width: 500px) {
+  .container-item {
+    display: block;
+    flex-wrap: wrap;
+  }
+}
 .card-img {
   height: 10rem;
   width: 10rem;
 }
+
 img:hover {
   transform: scale(1.2, 1.2);
 }
@@ -49,6 +47,9 @@ img:hover {
 .card-p {
   width: 10vw;
 }
+
 article button {
   align-self: flex-end;
 }
+
+/*# sourceMappingURL=output.css.map */
