scss och footer;Kamie

--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,18 +1,26 @@
-.card {
+@media (max-width: 500px) {
+  .container-item {
+  display: block;
+  flex-wrap: wrap;
+  }
+ }
+  
+ .card {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-around;
-
+  
   transition: 0.3s;
   max-width: 50em;
   margin: auto;
   text-align: center;
-  &:hover {
-    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
-  }
-}
-
-.container-item {
+ }
+  
+ .card:hover {
+  box-shadow: 0 8px px 0 rgba(0, 0, 0, 0.2);
+ }
+  
+ .container-item {
   border: 1px solid white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 0;
@@ -22,25 +30,19 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-}
-@media (max-width: 500px) {
-  .container-item {
-    display: block;
-    flex-wrap: wrap;
-  }
-}
-
-.card-img {
+ }
+  
+ .card-img {
   height: 10rem;
   width: 10rem;
-}
-img:hover {
+ }
+ img:hover {
   transform: scale(1.2, 1.2);
-}
-
-.card-p {
+ }
+  
+ .card-p {
   width: 10vw;
-}
-article button {
+ }
+ article button {
   align-self: flex-end;
-}
+ }
