--- a/style.css
+++ b/style.css
@@ -1,37 +1,34 @@
-#footer {
-  background: rgba(67, 90, 51, 0.822);
-  margin-top: 1rem;
-  height: 100%;
-  padding-top: 100px;
-  padding-bottom: 10px;
-  border-top: 2px solid black;
+@media (max-width: 500px) {
+  .container-item {
+    display: block;
+    flex-wrap: wrap; } }
+
+.card {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  transition: 0.3s;
+  max-width: 50em;
+  margin: auto;
+  text-align: center; }
+
+.card:hover {
+  box-shadow: 0 8px px 0 rgba(0, 0, 0, 0.2); }
+
+.container-item {
+  border: 1px solid white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 0;
+  width: 30%;
+  margin: 1%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center; }
 
-.footer-social {
-  position: relative;
-  display: flex;
-  justify-content: center; }
-
-.social i {
-  padding-right: 10px;
-  padding-left: 10px;
-  font-size: 50px;
-  color: #fff; }
-
-.footer-a-li a {
-  text-decoration: none;
-  color: black; }
-
-.footer-bottom {
-  background-color: black;
-  color: white;
-  width: 100%;
-  text-align: center; 
-}
-
+.card-img {
+  height: 10rem;
+  width: 10rem; }
 
 img:hover {
   transform: scale(1.2, 1.2); }
