--- a/scss/header.scss
+++ b/scss/header.scss
@@ -3,7 +3,7 @@ list-style-type: none;
 margin: 0;
 padding: 0;
 overflow: hidden;
-background-color: #333;
+background-color: rgb(206, 206, 206);
 display: flex;
 justify-content: center;
 }
