--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,48 +1,65 @@
-@media (max-width: 500px) {
-  .container-item {
-  display: block;
-  flex-wrap: wrap;
-  }
- }
-  
- .card {
-  display: flex;
-  flex-wrap: nowrap;
+.card {
+  display: grid;
+  grid-template-areas: "card1 card2 card3 card4";
   justify-content: space-around;
-  
-  transition: 0.3s;
-  max-width: 50em;
-  margin: auto;
   text-align: center;
- }
-  
- .card:hover {
+  padding: 10px;
+  transition: 0.1s;
+}
+#item1 {
+  grid-area: card1;
+}
+#item2 {
+  grid-area: card2;
+}
+#item3 {
+  grid-area: card3;
+}
+#item4 {
+  grid-area: card4;
+}
+.card:hover {
   box-shadow: 0 8px px 0 rgba(0, 0, 0, 0.2);
- }
-  
- .container-item {
+}
+
+.container-item {
   border: 1px solid white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 0;
-  width: 30%;
-  margin: 1%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
   align-items: center;
- }
-  
- .card-img {
+}
+
+.card-img {
   height: 10rem;
   width: 10rem;
- }
- img:hover {
-  transform: scale(1.2, 1.2);
- }
-  
- .card-p {
+}
+.card-p {
   width: 10vw;
- }
- article button {
+}
+article button {
   align-self: flex-end;
- }
+  background-color: #2ea44f;
+  color: white;
+  padding: 10px;
+  width: 100%;
+  border-radius: 5px;
+  font-weight: bold;
+
+  &:hover {
+    background-color: #004d00;
+    color: black;
+  }
+}
+.pris {
+  color: #c5004a;
+  text-align: left;
+}
+@media (max-width: 780px) {
+  .card {
+    display: grid;
+    grid-template-areas:
+      "card1"
+      "card2"
+      "card3"
+      "card4";
+  }
+}
