--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,9 +1,10 @@
 .card {
+  font-family: "Open Sans", sans-serif;
   display: grid;
   grid-template-areas: "card1 card2 card3 card4";
   justify-content: space-around;
   text-align: center;
-  padding: 10px;
+  padding: 15px;
   transition: 0.1s;
 }
 #item1 {
@@ -27,7 +28,10 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   align-items: center;
 }
-
+.title {
+  color: #2d8ac0;
+  font-weight: bold;
+}
 .card-img {
   height: 10rem;
   width: 10rem;
@@ -35,7 +39,7 @@
 .card-p {
   width: 10vw;
 }
-article button {
+.buy-btn {
   align-self: flex-end;
   background-color: #2ea44f;
   color: white;
@@ -61,5 +65,6 @@ article button {
       "card2"
       "card3"
       "card4";
+    grid-gap: 10px;
   }
 }
