--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,9 +1,32 @@
-.nav-bar {
-list-style-type: none;
-margin: 0;
-padding: 0;
-overflow: hidden;
-background-color: rgb(206, 206, 206);
-display: flex;
-justify-content: center;
-}
+#nav-bar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(219, 219, 219);
+  }
+  
+  li {
+    float: left;
+    border-right:1px solid #bbb;
+  }
+  
+  li:last-child {
+    border-right: none;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover:not(.active) {
+    background-color: rgb(199, 199, 199);
+  }
+  
+  .active {
+    background-color: #385c39;
+  }
