--- a/style.css
+++ b/style.css
@@ -1,34 +1,32 @@
-.nav-bar {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #cecece;
-  display: flex;
-  justify-content: center;
-}
 
     /* Början av min navbar /sandra */
 
-    h2 {
-      text-align: center;
-      font-family: 'Courier New', Courier, monospace;
-      font-size: 40px;
-      padding-bottom:100px;
-    }
-    nav {
+    header {
+      border:1px solid rgb(243, 27, 27);
       background-image: url("Bilder/nice-christmas-packages-white-table.jpg");
       background-size: 100%;
       padding-top: 400px;
       margin-bottom: 100px;
-      background-repeat: none;
+      background-repeat: no-repeat;
+    }
+
+    h2 {
+      border:1px solid darkgrey;
+      margin-bottom:20px;
+      text-align: center;
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 4rem;
+    }
+
+    nav {
+      font-family: Arial, Helvetica, sans-serif;
     }
 
     #nav-bar {
-      width: 500px;
+      border:1px solid rgb(29, 158, 36);
+      width: 700px;
+      height: 50px;
       list-style-type: none;
-      margin: 0;
-      padding: 0;
       z-index: 1;
     }
     
