--- a/style.css
+++ b/style.css
@@ -1,4 +1,114 @@
 
+    /* Början av navbar /sandra */
+
+    header {
+      *border:1px solid rgb(243, 27, 27);
+      background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(231, 23, 23, 0), rgba(255, 255, 255, 0.945),  rgb(255, 255, 255)),
+      url("Bilder/nice-christmas-packages-white-table.jpg");
+      background-size: 100%;
+      padding-top: 25vw;
+      margin-bottom: 100px;
+      background-repeat: no-repeat;
+      display: flex;
+      justify-content: center;
+      height: 45vw;
+    }
+
+    h1 {
+      *border:1px solid darkgrey;
+      margin-bottom:40px;
+      text-align: center;
+      font-family: 'Dancing Script', cursive;      
+      font-size: 9vw;
+      color: #364936;
+    }
+
+    nav {
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    #nav-bar {
+      width: 60vw;
+      height: 52px;
+      list-style-type: none;
+      background-color: #e7e7e7;
+      border-radius: 25px;
+    }
+    
+    li {
+      border-radius: 25px;
+      list-style-type: none;
+      float: left;
+      margin: 3px;
+    }
+    
+    li:last-child {
+      border-right: none;
+      border-radius: 25px;
+
+    }
+    
+    li a {
+      border-radius: 25px;
+
+      display: block;
+      color: rgb(77, 77, 77);
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+    
+    li a:hover:not(.active) {
+      border-radius: 25px;
+
+      background-color: rgb(199, 199, 199);
+    }
+    
+    .active {
+      border-radius: 25px;
+      background-color: #bbd4bc;
+    }      
+
+  /* slutet av navbar */
+
+  /* början av "om oss" artikeln */
+
+.omoss-container {
+  *border: 1px solid rgb(209, 26, 26);
+  margin-bottom: 150px;
+  width: auto;
+  display: flex;
+  justify-content: center;
+}
+.omoss {
+  *border: 1px solid rgb(209, 26, 26);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: auto;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.bild {
+  *border: 1px solid green;
+  width: 150px;
+}
+
+.title {
+  *border: 1px solid rgb(209, 114, 26);
+  font-family: 'Dancing Script', cursive;
+  padding-bottom:20px;
+}
+
+.gruppett {
+  *border: 1px solid rgb(60, 26, 209);
+  width: 400px;
+  padding:20px;
+}
+
+
+
+  /* slutet av "om oss" artikeln */
 
   
 .card {
