--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,3 +1,10 @@
+body {
+  display: flex;
+  place-content: end;
+  flex-direction: column;
+  height: 100vh; 
+}
+
 footer{
   line-height: 24px;
   color: #ffff;
@@ -46,6 +53,18 @@ footer input{
   border-radius: 8px;
   border-width: 2px;
 }
+
+@media (max-width: 331px) {
+  footer input {
+    font-size: 10px;
+    border-style: solid;
+    width: 100%;
+    line-height: 12px;
+    padding: 6px 8px;
+    margin-block: 4px;
+    border-radius: 4px;
+    border-width: 1px;
+    float: none; } }
 
 footer input[type="email"] {
   background-color: rgba(252, 252, 252, 0.486);
