--- a/scss/card.scss
+++ b/scss/card.scss
@@ -51,7 +51,7 @@
   font-weight: bold;
   margin-bottom: 0;
   position: relative;
-
+  border: none;
   &:hover {
     background-color: white;
     color: black;
@@ -59,6 +59,30 @@
 }
 .pris {
   color: #c5004a;
+}
+
+.loggain {
+  float: right;
+  background-color: #2ea44f;
+  color: white;
+  padding: 10px;
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  width: 100px;
+  height: 50px;
+  margin: 10px;
+  &:hover {
+    background-color: white;
+  }
+  a {
+    color: white;
+    text-decoration: none;
+    &:hover {
+      color: black;
+      background-color: white;
+    }
+  }
 }
 @media (max-width: 780px) {
   .card {
