--- a/style.css
+++ b/style.css
@@ -32,8 +32,16 @@ nav {
   background-color: #e7e7e7;
   border-radius: 25px;
 }
+@media screen and (max-width: 480px) {
+  #nav-bar, li{
+  background-color:none;
+  list-style-type: none;
+  margin: 3px;
+  }
+}
 
 li {
+  background-color: #e7e7e7;
   border-radius: 25px;
   list-style-type: none;
   float: left;
@@ -64,9 +72,19 @@ li a:hover:not(.active) {
   background-color: #bbd4bc;
 }
 
+.cart{
+  float:right;
+}
+
+
 /* slutet av navbar */
 /* början av "om oss" artikeln */
-.omoss-container {
+
+span {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.omoss-container, .kontaktformular-container{
   *border: 1px solid #d11a1a;
   margin-bottom: 150px;
   width: auto;
@@ -74,7 +92,7 @@ li a:hover:not(.active) {
   justify-content: center;
 }
 
-.omoss {
+.omoss, .kontaktformular-container{
   *border: 1px solid #d11a1a;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: auto;
@@ -178,7 +196,7 @@ li a:hover:not(.active) {
   color: white;
   padding: 10px;
   width: 100%;
-  border-radius: 5px;
+  border-radius: 25px;
   border: none;
   width: 100px;
   height: 50px;
