--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@ header {
   *border: 1px solid #f31b1b;
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(231, 23, 23, 0), rgba(255, 255, 255, 0.945), white), url("Bilder/nice-christmas-packages-white-table.jpg");
   background-size: 100%;
-  padding-top: 25vw;
-  margin-bottom: 100px;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   height: 45vw;
+  padding-top: 25vw;
+  margin-bottom: 230px;
 }
 
 h1 {
@@ -33,12 +33,14 @@ nav {
   background-color: #e7e7e7;
   border-radius: 25px;
 }
-@media screen and (max-width: 480px) {
-  #nav-bar, li{
+@media screen and (max-width: 495px) {
+  #nav-bar, li, .loggain{
   background-color:none;
   list-style-type: none;
   margin: 3px;
   }
+
+
 }
 
 li {
