--- a/scss/loggain.scss
+++ b/scss/loggain.scss
@@ -2,3 +2,28 @@
 .card-update-div {
   display: none;
 }
+
+.loggain {
+  float: right;
+  background-color: #2ea44f;
+  color: white;
+  padding: 10px;
+  width: 100%;
+  border-radius: 25px;
+  border: none;
+  width: 150px;
+  height: 45px;
+  margin-top:3px;
+}
+
+.loggain:hover {
+  background-color: white;
+}
+.loggain a {
+  color: white;
+  text-decoration: none;
+}
+.loggain a:hover {
+  color: black;
+  background-color: white;
+}
