--- a/style.css
+++ b/style.css
@@ -193,12 +193,13 @@ span {
   color: white;
   padding: 10px;
   width: 100%;
-  border-radius: 5px;
+  border-radius: 25px;
   border: none;
-  width: 100px;
-  height: 50px;
-  margin: 10px;
+  width: 150px;
+  height: 45px;
+  margin-top:3px;
 }
+
 .loggain:hover {
   background-color: white;
 }
