--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,42 +1,44 @@
 /* Början av navbar /sandra */
 header {
-  *border: 1px solid #f31b1b;
+  border: 1px solid red;
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(231, 23, 23, 0), rgba(255, 255, 255, 0.945), white), url("Bilder/nice-christmas-packages-white-table.jpg");
   background-size: 100%;
-  padding-top: 25vw;
-  margin-bottom: 100px;
+  padding-top: 20vw;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
-  height: 45vw;
+  height:auto;
+  margin-bottom:60px;
+  *flex-wrap: wrap;
 }
 
 h1 {
-  *border: 1px solid darkgrey;
-  margin-bottom: 40px;
+  border: 1px solid rgb(250, 14, 250);
   text-align: center;
   font-family: "Dancing Script", cursive;
   font-size: 9vw;
   color: #364936;
+  padding: 7vw;
 }
 
 nav {
+  border: 1px solid blue;
+  width: 75vw;
+  height: auto;
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.nav-container {
+  border: 1px solid rgb(255, 166, 0);
+
+}
 #nav-bar {
-  width: 60vw;
-  height: 52px;
+  *border: 1px solid lightgreen;
+  width: 74.5vw;
+  height: 55px;
   list-style-type: none;
   background-color: #e7e7e7;
   border-radius: 25px;
-}
-@media screen and (max-width: 480px) {
-  #nav-bar, li{
-  background-color:none;
-  list-style-type: none;
-  margin: 3px;
-  }
 }
 
 li {
@@ -70,19 +72,44 @@ li a:hover:not(.active) {
   background-color: #bbd4bc;
 }
 
-.cart{
-  float:right;
+.cart {
+  float: right;
 }
 
+@media screen and (max-width: 790px) {
+  header {
+    margin-bottom: 40px;
+    width: 100vw;
+    height: 330px;
+    margin-bottom:450px;
+  }
+  
+  nav, .loggain, .cart{
+    float:none;
+  }
+  .cart {
+    width:74vw;
+  }
+  
+
+  #nav-bar, li {
+    float:none; 
+  }
+
+  li {
+    border:solid white 5px;
+    margin: 0px;
+
+  }
+}
 
 /* slutet av navbar */
 /* början av "om oss" artikeln */
-
 span {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.omoss-container, .kontaktformular-container{
+.omoss-container, .kontaktformular-container {
   *border: 1px solid #d11a1a;
   margin-bottom: 150px;
   width: auto;
@@ -90,7 +117,7 @@ span {
   justify-content: center;
 }
 
-.omoss, .kontaktformular-container{
+.omoss, .kontaktformular-container {
   *border: 1px solid #d11a1a;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: auto;
