--- a/style.css
+++ b/style.css
@@ -1,45 +1,47 @@
 @charset "UTF-8";
 /* Början av navbar /sandra */
 header {
-  *border: 1px solid #f31b1b;
+  border: 1px solid red;
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(231, 23, 23, 0), rgba(255, 255, 255, 0.945), white), url("Bilder/nice-christmas-packages-white-table.jpg");
   background-size: 100%;
-  padding-top: 25vw;
-  margin-bottom: 100px;
+  padding-top: 20vw;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
-  height: 45vw;
+  height:auto;
+  margin-bottom:60px;
+  *flex-wrap: wrap;
 }
 
 h1 {
-  *border: 1px solid darkgrey;
-  margin-bottom: 40px;
+  border: 1px solid rgb(250, 14, 250);
   text-align: center;
   font-family: "Dancing Script", cursive;
   font-size: 9vw;
   color: #364936;
+  padding: 7vw;
 }
 
 nav {
+  border: 1px solid blue;
+  width: 75vw;
+  height: auto;
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.nav-container {
+  border: 1px solid rgb(255, 166, 0);
+
+}
 #nav-bar {
-  width: 60vw;
-  height: 52px;
+  *border: 1px solid lightgreen;
+  width: 74.5vw;
+  height: 55px;
   list-style-type: none;
   background-color: #e7e7e7;
   border-radius: 25px;
 }
 
-@media screen and (max-width: 480px) {
-  #nav-bar, li {
-    background-color: none;
-    list-style-type: none;
-    margin: 3px;
-  }
-}
 li {
   background-color: #e7e7e7;
   border-radius: 25px;
@@ -73,6 +75,33 @@ li a:hover:not(.active) {
 
 .cart {
   float: right;
+}
+
+@media screen and (max-width: 790px) {
+  header {
+    margin-bottom: 40px;
+    width: 100vw;
+    height: 330px;
+    margin-bottom:450px;
+  }
+  
+  nav, .loggain, .cart{
+    float:none;
+  }
+  .cart {
+    width:74vw;
+  }
+  
+
+  #nav-bar, li {
+    float:none; 
+  }
+
+  li {
+    border:solid white 5px;
+    margin: 0px;
+
+  }
 }
 
 /* slutet av navbar */
@@ -191,17 +220,15 @@ span {
   float: right;
   background-color: #2ea44f;
   color: white;
-  padding: 10px;
-  width: 100%;
   border-radius: 25px;
   border: none;
   width: 150px;
-  height: 45px;
-  margin-top:3px;
+  height: 55px;
+  margin-top:5px;
 }
 
 .loggain:hover {
-  background-color: white;
+  background-color: rgb(18, 109, 53);
 }
 .loggain a {
   color: white;
